tests/paczka1/fuzzy1/32006977.err
Error in line 3: ywyv S186 44,3
Error in line 4: JoaJ5t S748 41,9
Error in line 6: A460 A460 276,4
Error in line 24: 8gadJ S748 2n,6
Error in line 25: 8gadJ S748 81,2
Error in line 26: A460 A460 47,4
Error in line 34: BUJf1lEK7vk A460 9,4
